tests/NormalTests/paczka2/big_fuzzy/40069943.err
Error in line 6: mcHgLrQF A435 0,0
Error in line 3: yopWWGOfQm A330 31,2
Error in line 7: mcHgLrQF S146 79,4
Error in line 8: mpfo7qi A330 18,7
Error in line 28: mcHgLrQF A435 2,80
Error in line 27: JnQXbDPQ5 A836 35,3
Error in line 30: mcHgLrQF A435 9,2
Error in line 42: A836 A435 48,8
Error in line 40: mcHgLrQF S146 24,7
Error in line 62: mpfo7qi A330 29,9
Error in line 71: yopWWGOfQm S146 68,2
Error in line 57: A836 A836 202,2
Error in line 92: A836 S146 4,5
Error in line 89: dgZqVBtr8z5 A330 49,8
Error in line 96: A836 A836 10,2
Error in line 91: yopWWGOfQm A435 110,7
Error in line 109: JnQXbDPQ5 A330 43,2
Error in line 106: 3qkk6UAywRN S146 0,7
Error in line 137: yopWWGOfQm A836 33,5
Error in line 152: 3qkk6UAywRN A330 58,5
Error in line 163: JnQXbDPQ5 A836 71,13
Error in line 164: dgZqVBtr8z5 S146 65,7
Error in line 148: JnQXbDPQ5 A435 8,7
Error in line 166: JnQXbDPQ5 A836 78,0
Error in line 165: dgZqVBtr8z5 A330 50,2
Error in line 168: dgZqVBtr8z5 S146 64,0
Error in line 172: mcHgLrQF A836 71,4
Error in line 180: yopWWGOfQm S146 59,5
Error in line 181: yopWWGOfQm A330 91,7
Error in line 185: yopWWGOfQm A836 40,2
Error in line 188: JnQXbDPQ5 A435 88,7
Error in line 169: dgZqVBtr8z5 A330 9,9
Error in line 200: A836 A330 83,9
Error in line 207: A836 S146 0,7
Error in line 212: A836 A435 89,0
Error in line 213: A836 S146 25,9
Error in line 205: JnQXbDPQ5 A836 334,1
Error in line 219: mcHgLrQF A836 97,3
Error in line 221: JnQXbDPQ5 A435 24,7
Error in line 224: dgZqVBtr8z5 A435 31,9
Error in line 233: dgZqVBtr8z5 A836 12,3
Error in line 239: JnQXbDPQ5 Acc0 75,2
Error in line 231: 3qkk6UAywRN A435 38,9
Error in line 238: dgZqVBtr8z5 A435 58,2
